// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`while using the gitpkg cli should correctly handle publish command 1`] = `
Object {
  "_": Array [
    "publish",
  ],
}
`;

exports[`while using the gitpkg cli should correctly handle publish command with registry arg 1`] = `
Object {
  "_": Array [
    "publish",
  ],
  "r": "git@github.com:ramasilveyra/public-registry.git",
  "registry": "git@github.com:ramasilveyra/public-registry.git",
}
`;
